--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
         <p class="header__paragraph">Junior <strong>Front-End Developer</strong></p>
 
 
-
+        <nav>
+            <ul class="navigation">
+                <li><a class="navigation__link" href="#o-mnie">O mnie</a></li>
+                <li><a class="navigation__link" href="#front-end">Po co mi Front-End</a></li>
+                <li><a class="navigation__link" href="#przepis">Składniki na kurczaka z suszonymi</a></li>
+                <li><a class="navigation__link" href="#przygotowanie">Jak przygotować kurczaka z suszonymi</a></li>
+                <li><a class="navigation__link" href="#top-dania">Top 4 dania</a></li>
+                <li><a class="navigation__link" href="#kontakt">Kontakt</a></li>
+            </ul>
+        </nav>
             <button class="header__button js-changeBackgroundButton">Dzień</button>
             <button class="header__button js-removeImageButton">Ukryj</button>
     </header>
